--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/nixo-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nixo FDE Dashboard</title>
+    <title>FDE Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
